--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <title>WDD230 Homepage</title>
         <meta name="description" content="This is the assignment homepage for WDD230 Spring 2020">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="main.css">
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
     <body>
