--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main>
             <h2>WDD230 Web Assignment Portal</h2>
             <ul>
-                <li>Lesson 02:<a href="#">Assignment Principles</a></li>
+                <li>Lesson 02:<a href="Lesson2\design-principles.html">Design Principles</a></li>
                 <li>Lesson 03:<a href="#">Assignment Planning</a></li>
                 <li>Lesson 04:<a href="#">Assignment Page</a></li>
             </ul>
