--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -16,30 +16,30 @@
         <h1>Design Principles</h1>
     </header>
     <main>
-    <section class="one">
+    <section>
         <h2>Visual Hierarchy</h2>
-        <a class="site" href="https://www.motosport.com">MotoSport</a> 
-        <img src="motosport1.jpg" alt="moto bike">   
+        <a class="site" href="https://www.motosport.com">MotoSport Shop</a> 
+        <img src="images/motosport1.jpg" alt="moto bike">   
     <p>    
         This site is interesting with utalizing images of what they sell. Such as the image of washing a 
         dirt bike to advertise their spring sale. Great example for featuring the sale and place the next 
         step for the user to input their bike information to find products specific for their bike. 
     </p>
     </section>
-    <section class="two">
-        <h3>Contrast</h3>
+    <section>
+        <h2>Contrast</h2>
         <a class="site" href="https://www.nationalgeographic.com">Nation Geographic</a>   
-        <img src="nationalgeo1.jpg" alt="dino">
+        <img src="images/nationalgeo1.jpg" alt="dino">
         <p>    
         I find National Geographic covers alot of the different principles, but on their open page of their 
         site, this caught my attention.The contrast of the font colors and the photo play well together. 
         Complimenting colors, balanced fonts and visually appealing. 
     </p>
     </section>
-    <section class="three">       
-        <h4>Rule of Third</h4>
+    <section>       
+        <h2>Rule of Third</h2>
         <a class="site" href="https://www.twowanderingsoles.com/blog/north-island-new-zealand-road-trip-itinerary">TwoWanderingSoles</a>   
-        <img src="twosoles1.jpg" alt="soles">
+        <img src="images/twosoles1.jpg" alt="soles">
         <p>    
         What convinced me to check out this site, was this photo. They did a good job at fitting the
         elements of the image with a focal point. Well balanced with the couple and scenery of New Zealand.
