--- a/Lesson2/design-principles.html
+++ b/Lesson2/design-principles.html
@@ -6,10 +6,10 @@
         <title>WDD230 Portal</title>
         <meta name="description" content="This is the assignment portal for WDD230 Spring 2020">
         <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="cssD/normalize.css">
-        <link rel="stylesheet" href="cssD/small.css">
-        <link rel="stylesheet" href="cssD/medium.css">
-        <link rel="stylesheet" href="cssD/full.css">
+        <link rel="stylesheet" href="css2/normalize.css">
+        <link rel="stylesheet" href="css2/small.css">
+        <link rel="stylesheet" href="css2/medium.css">
+        <link rel="stylesheet" href="css2/full.css">
     </head>    
     <body>
     <header>
