--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -5,8 +5,9 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <title>Typography Doc</title>
         <meta name="description" content="WDD230 Spring 2020 Forcast Project Plan-Typography">
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+        </style>         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     <body>
     <header>
@@ -22,16 +23,12 @@
             </ul>
         </nav>
     </header>
-        <main>
-            <section class="heading">
+    <main>
             <h2>Header Font</h2>
             <p>Anton, sans-serif</p>
-            </section>
-            <section class="text">
             <h2>Body & Footer Font</h2>
             <p>Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif</p>
-            </section>
-        </main>
+    </main>
     <footer>
        <p>&copy;2020 | Chelsea Thomson | Utah | 
         <a class="weblink" href="https://www.byui.edu/online" target="_blank">BYUI Online Learning</a></p>
