--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -5,8 +5,9 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <title>Target Audience</title>
         <meta name="description" content="WDD230 Spring 2020 Target Audience for Forcast Project">
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
+        </style>         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     <body>
     <header>
