--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -47,7 +47,11 @@
         do during that time. What to wear, activities available, backup ideas and so forth. This way they are 
         able to plan with ease and not get mobbed by internet information.<br><br>
         Ryan Thomson wants to know surfing conditions in Hawaii. We are able tp provide weather and conditions 
-        for such activities. With help from the locals and their data, we can help him plan out his days. <br><br>         
+        for such activities. With help from the locals and their data, we can help him plan out his days. <br><br>
+        A father and son are wanting to go fishing. It is hard t o find information on the water conditions and
+        if fish are lively. With our help we can let them know if its time to fish or time to go to the fish market.<br><br>
+        A couple is desiring to go ride their mountain bikes. Where can they find trail conditions or if the weather is right
+        for riding yet. We can let them know ride hard or watch out for the horse poop and ruts.         
     </p>
             
         </main>
