--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -17,10 +17,10 @@
         <a class="outlet" href="https://www.weatheroutlet.org/" target="blank">www.weatheroutlet.org</a>      
         <nav>
             <ul>
-                <li><a href="..\lesson3\">Home</a></li>
-                <li><a href="..\lesson3\target-audience.html">Audience</a></li>
-                <li><a href="..\lesson3\color-scheme.html">Color Scheme</a></li>
-                <li><a href="..\lesson3\typography.html">Typography</a></li>
+                <li><a href="../lesson3/">Home</a></li>
+                <li><a href="../lesson3/target-audience.html">Audience</a></li>
+                <li><a href="../lesson3/color-scheme.html">Color Scheme</a></li>
+                <li><a href="../lesson3/typography.html">Typography</a></li>
             </ul>
         </nav>
     </header>
