--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <main>
             <h2>WDD230 Web Assignment Portal</h2>
             <ul>
-                <li>Lesson 02:<a href="Lesson2\design-principles.html">Design Principles</a></li>
-                <li>Lesson 03:<a href="..\lesson3\">Weather Plan Doc</a></li>
+                <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
+                <li>Lesson 03:<a href="../lesson3/">Weather Plan Doc</a></li>
                 <li>Lesson 04:<a href="#">Assignment Page</a></li>
             </ul>
         </main>
