--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -13,8 +13,7 @@
     <body>
     <header>
         <img src="img/logo5.jpg" alt="logo">
-        <h1>Your One Stop Shop</h1>
-        <a class="outlet" href="https://www.weatheroutlet.org/" target="blank">www.weatheroutlet.org</a>      
+        <h1>Home Forcast</h1>
         <nav>
             <ul>
                 <li><a href="../lesson3/">Home</a></li>
@@ -26,9 +25,16 @@
     </header>
         <main>
             <h2>Welcome to Weather Outlet</h2>
-            <p>Rain or Shine, planning outside activities is weather based.<br>
-            Here you will find not just the weather, but advice and ideas to make 
-            the most with your trip plans.    
+            <a class="outlet" href="https://www.weatheroutlet.org/" target="blank">www.weatheroutlet.org</a><br>      
+            <p> Rain or Shine, our purpose of the site is to not only provide the weather,
+                but to give adive amd ideason the local conditions. It is the one stop shop to find information
+                from trails to what the locals wear during the season. The goal is to help consumers with their 
+                trip plans and the packing easier.    
+            </p>
+            <h2>Logo</h2>
+            <p>
+                The logo is a network tower in the cloud...<br> 
+                Connected at the Push of a Button.
             </p>
 
             
