--- a/lesson3/target-audience.html
+++ b/lesson3/target-audience.html
@@ -24,13 +24,12 @@
         </nav>
     </header>
         <main>
-            <h2>Trip Advice</h2>
-            <p>Unsure how to plan for your camping trip, backpacking, and any outdoor
-                activity? The Weather Outlet will not only tell you the weather, but 
-                what kind of day it would be. For example: It's a HOT DAY! Pack your
-                swim suit and sunscreen. Hikers, be sure to jump into that waterfall 
-                for a refreshing cool down. We will provide the ideas to help ease the planning. 
-                Relax and have fun! 
+            <h2>Consumer Audience</h2>
+            <p> We are aiming for any outdoor enthusiasts or travelers. These are the type of people will 
+                look for weather, but then try to navigate to other sites to find more information. They will 
+                be looking for what to pack for that season, trying to find if trails are open or muddy or have a 
+                poop mine path. We are here to bring this type of information to the consumer, and make planning 
+                less stressful.  
             </p>
         <h2>Personas</h2>
             <p>Josh Black - Enduro Racer - Travels Global - Struggles planning training do to lack of
@@ -39,19 +38,19 @@
             conditions to plan hike path.
             </p>
         <h2>Scenarios</h2>
-        <p>The Busson Family are planning a trip to Disneyland in October. The weather in that season
+        <p>A family are planning a trip to Disneyland in October. The weather in that season
             is hard to figure out what to pack. Our site provides ideas of what could be exspected. This then
             helps the parents know what to pack and how to plan out their activites.<br><br>
-        The Hunkley couple want to plan a New Zealand trip for thier anniversary. The seasons are different,
-        and don't know how to best plan out their trip. Our site will provide information of what the locals
-        do during that time. What to wear, activities available, backup ideas and so forth. This way they are 
-        able to plan with ease and not get mobbed by internet information.<br><br>
-        Ryan Thomson wants to know surfing conditions in Hawaii. We are able tp provide weather and conditions 
-        for such activities. With help from the locals and their data, we can help him plan out his days. <br><br>
+        A elderly couple is trying to plan a New Zealand trip for thier anniversary. The seasons are different
+        that they are in the States,and are confused on how to best plan out their trip. Our site will provide information 
+        of what the locals do during that time. What to wear, activities available, backup ideas for rainy days, and so forth. 
+        We will be able to help plan with ease and  they wont have to spend hours searching for internet information.<br><br>
+        A surfer wants to know surfing conditions in Hawaii. Weather Outlet will provide weather and conditions 
+        for such activities.<br><br>
         A father and son are wanting to go fishing. It is hard t o find information on the water conditions and
-        if fish are lively. With our help we can let them know if its time to fish or time to go to the fish market.<br><br>
+        if fish are lively. The site can help them decide if this is time to fish or visit the market.<br><br>
         A couple is desiring to go ride their mountain bikes. Where can they find trail conditions or if the weather is right
-        for riding yet. We can let them know ride hard or watch out for the horse poop and ruts.         
+        for riding yet? The Outlet will have advice and information to watch out for the horse poop and ruts.         
     </p>
             
         </main>
