--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -25,7 +25,7 @@
     </header>
     <main>
             <h2>Header Font</h2>
-            <p>Anton, sans-serif</p>
+            <p class="anton">Anton, sans-serif</p>
             <h2>Body & Footer Font</h2>
             <p>Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif</p>
     </main>
