--- a/lesson3/color-scheme.html
+++ b/lesson3/color-scheme.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name= "viewport" content="width=device-width, initial-scale=1">
-        <title>Color Style</title>
+        <title>Site Plan-Color Style</title>
         <meta name="description" content="WDD230 Spring 2020 Forcast Project PLan-Colors">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
@@ -13,13 +13,12 @@
     <body>
     <header>
         <img src="img/logo5.jpg" alt="logo">
-        <h1>Your One Stop Shop</h1>
         <nav>
             <ul>
                 <li><a href="..\lesson3\">Home</a></li>
-                <li><a href="..\lesson3\target-audience.html">Audience</a></li>
-                <li><a href="..\lesson3\color-scheme.html">Color Scheme</a></li>
-                <li><a href="..\lesson3\typography.html">Typography</a></li>
+                <li><a href="target-audience.html">Audience</a></li>
+                <li><a href="color-scheme.html">Color Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
             </ul>
         </nav>
     </header>
@@ -27,23 +26,23 @@
             <section>
                 <div class="primary">
                     <div class="bg-primary height-xxxl"></div>
-                    <p>Primary Color: #313742</p>
+                    <p>Main Bkgrd Color: #313742</p>
                 </div>
                 <div class="secondary">
                     <div class="bg-secondary height-xxxl"></div>
-                    <p>Secondary Color: #505b6e</p>                
+                    <p>Text Bkgrd Color: #505b6e</p>                
                 </div>
                 <div class="accent1">
                     <div class="bg-accent1 height-xxxl"></div>
-                    <p>Accent 1 Color: #04d3d3</p>
+                    <p>Header/Footer Color: #04d3d3</p>
                 </div>
                 <div class="accent2">
                     <div class="bg-accent2 height-xxxl"></div>
-                    <p>Accent 2 Color: #01ff23</p>
+                    <p>Link/Nav Color: #01ff23</p>
                 </div>
                 <div class="accent3">
                     <div class="bg-accent3 height xxxl"></div>
-                    <p>Accent 3 Color: #000000</p>
+                    <p>Nav/Text Color: #000000</p>
                 </div>
             </section>       
         </main>
