--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name= "viewport" content="width=device-width, initial-scale=1">
-        <title>Typography Doc</title>
+        <title>Site Plan-Typography Doc</title>
         <meta name="description" content="WDD230 Spring 2020 Forcast Project Plan-Typography">
         <style>
             @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
@@ -12,13 +12,12 @@
     <body>
     <header>
         <img src="img/logo5.jpg" alt="logo">
-        <h1>Typography</h1>
         <nav>
             <ul>
                 <li><a href="..\lesson3\">Home</a></li>
-                <li><a href="..\lesson3\target-audience.html">Audience</a></li>
-                <li><a href="..\lesson3\color-scheme.html">Color Scheme</a></li>
-                <li><a href="..\lesson3\typography.html">Typography</a></li>
+                <li><a href="target-audience.html">Audience</a></li>
+                <li><a href="color-scheme.html">Color Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
             </ul>
         </nav>
     </header>
