--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -13,13 +13,13 @@
     <body>
     <header>
         <img src="img/logo5.jpg" alt="logo">
-        <h1>Home Forcast</h1>
+        <h1>Site Plan</h1>
         <nav>
             <ul>
                 <li><a href="../lesson3/">Home</a></li>
-                <li><a href="../lesson3/target-audience.html">Audience</a></li>
-                <li><a href="../lesson3/color-scheme.html">Color Scheme</a></li>
-                <li><a href="../lesson3/typography.html">Typography</a></li>
+                <li><a href="target-audience.html">Audience</a></li>
+                <li><a href="color-scheme.html">Color Scheme</a></li>
+                <li><a href="typography.html">Typography</a></li>
             </ul>
         </nav>
     </header>
