--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -5,9 +5,8 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <title>Site Plan-Typography Doc</title>
         <meta name="description" content="WDD230 Spring 2020 Forcast Project Plan-Typography">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-        </style>         <link rel="stylesheet" href="css/normalize.css">
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     <body>
     <header>
