--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -5,9 +5,7 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <title>Forcast Planning Doc</title>
         <meta name="description" content="WDD230 Spring 2020 Forcast Project PLan">
-        <style>
-            @import url('https://fonts.googleapis.com/css2?family=Anton&display=swap');
-        </style>        
+        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">    
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
     <body>
