--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/sm.css"> 
     <body>
     <header>
-        <img src="images\logo5.jpg" alt="logo">
+        <img src="images/logo5.jpg" alt="logo">
         <h1>Forcast Site</h1>
         <div>Your one Stop Shop</div>
         <nav>
