fixed toggle error

--- a/lesson4/preston-4.html
+++ b/lesson4/preston-4.html
@@ -5,11 +5,12 @@
         <meta name= "viewport" content="width=device-width, initial-scale=1">
         <title>Preston Id Page</title>
         <meta name="description" content="WDD230 Spring 2020 Forcast Project Plan">
-        <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">    
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Anton&display=swap">    
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/lg.css">
         <link rel="stylesheet" href="css/sm.css"> 
+        <script src="js/java.js"></script>
     <body>
     <header>
         <img src="images/logo5.jpg" alt="logo">
@@ -17,7 +18,7 @@
         <div>Your one Stop Shop</div>
         <nav>
             <ul class="navigation responsive">
-                <li><a class="ham" href="#">&#9976;Menu</a></li>
+                <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
