--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <ul>
                 <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03:<a href="../lesson3/">Weather Plan Doc</a></li>
-                <li>Lesson 04:<a href="#">Assignment Page</a></li>
+                <li>Lesson 04:<a href="/lesson5/preston-5.html/">Weather Outlet</a></li>
             </ul>
         </main>
     <footer>
