--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -41,12 +41,12 @@
                     <h3>Summary Overcast</h3>
                     <p>Currently: <span id="condition">Cloudy</span></p>
                     <p>High: <span id="temp">45&#8457;</span></p>
-                    <p>Chance of Rain: <span id="percent">50%</p>
+                    <p>Chance of Rain: <span id="percent">50%</span></p>
                     <p>Wind Speed: <span id="wspd">10mph</span></p>
                 </section>
             </div>            
             <p class="five">5 Day Forcast</p>
-            <section class="day">
+            <div class="day">
                 <div class="forecast1">
                     <div>Mon</div>
                     <img src="images/sunny.jpg" alt="sun">
@@ -54,7 +54,7 @@
                 </div>
                 <div class="forecast2">
                     <div>Tues</div>
-                    <img src="images/partial cloudy.jpg" alt="cloud">
+                    <img src="images/partialcloudy.jpg" alt="cloud">
                     <div class="temp2">60&#8457;</div>
                 </div>
                 <div class="forecast3">
@@ -72,7 +72,7 @@
                     <img src="images/snow.jpg" alt="snow">
                     <div class="temp5">30&#8457;</div>
                 </div>
-            </section>
+            </div>
             <section>
                 <h3 class="art">Our Real Heros</h3>
                 <img src="images/hero.jpg" class="line" alt="med">
@@ -98,6 +98,7 @@
             <section class="contact">
                 <img src="images/map.jpeg" class="map" alt="state">
                 <div class="address">
+                    <h3>Contact Us</h3>
                     Weather Outlet<br>
                     123 Baby Shark Rd.<br>
                     Preston, Id 83263<br><br>
