--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
             <ul>
                 <li>Lesson 02:<a href="Lesson2/design-principles.html">Design Principles</a></li>
                 <li>Lesson 03:<a href="../lesson3/">Weather Plan Doc</a></li>
-                <li>Lesson 04:<a href="/lesson5/preston-5.html/">Weather Outlet</a></li>
+                <li>Lesson 04:<a href="lesson4\preston-4.html">Weather Outlet</a></li>
+                <li>Lesson 05:<a href="lesson5\preston-5.html">Weather Outlet P2</a></li>
+
             </ul>
         </main>
     <footer>
