suggested fix by class

--- a/lesson5/preston-5.html
+++ b/lesson5/preston-5.html
@@ -102,7 +102,7 @@
                     Weather Outlet<br>
                     123 Baby Shark Rd.<br>
                     Preston, Id 83263<br><br>
-                    <span >&#x1F4F1;1-208-Out-let1</span>
+                    <span >&#x1F4F1;1-208-Out-let1</span><br>
                     weatheroutlet1@outlook.com
                 </div>
             </section>
