activity webfont loader

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>WDD230 Homepage</title>
         <meta name="description" content="This is the assignment homepage for WDD230 Spring 2020">
         <link rel="shortcut icon" href="favicon.ico">
-        <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">
+        <!--<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">-->
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/medium.css">
@@ -32,6 +32,11 @@
     </footer>         
     <script>
         document.getElementById("last").textContent=document.lastModified;
+    </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
+    <script>
+        WebFont.load({
+            google:{families:['Permanent Marker']}});
     </script>
     </body>
 </html>
