--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li>Lesson 03:<a href="../lesson3/">Weather Plan Doc</a></li>
                 <li>Lesson 04:<a href="lesson4/preston-4.html">Weather Outlet</a></li>
                 <li>Lesson 05:<a href="lesson5/preston-5.html">Weather Outlet P2</a></li>
+                <li>Lesson 06:<a href="lesson6/preston-6.html">Weather Outlet P3</a></li>
 
             </ul>
         </main>
