--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -35,14 +35,11 @@
             <div class="hero">
                 <!--<img src="images/lake.jpeg" class="lake" alt="banner">-->
               <picture>
-                <source srcset="images/wdd230medium.jpg" media="(min-width:32.7em)">
-                <source srcset="images/wdd230large.jpg" media="(min-wdith:48em)">
-                <img src="images/wdd230small.jpg" class="hero" alt="wdd230 hero" style="width: auto;">
+                <img src="images/small.jpg" class="hero" alt="wdd230 hero">
+                <source srcset="/images/medium.jpg" media="(min-width:625px)">
+                <source srcset="images/large.jpg" media="(min-width:825px)">
               </picture>
                 <h2>Preston Idaho</h2>
-                <p class="small">Small</p>
-                <p class="med">Medium</p>
-                <p class="large">Large</p>
                 <section class="overlay">
                     <h3>Summary Overcast</h3>
                     <p>Currently: <span id="condition">Cloudy</span></p>
@@ -103,7 +100,7 @@
                 </p>
             </section>
             <section class="contact">
-                <img src="images/map.jpeg" class="map" alt="state">
+                <img src="images/map.jpg" class="map" alt="state">
                 <div class="address">
                     <h3>Contact Us</h3>
                     Weather Outlet<br>
