--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -35,10 +35,10 @@
             <div class="hero">
                 <!--<img src="images/lake.jpeg" class="lake" alt="banner">-->
               <picture>
-                <img src="images/small.jpg" class="hero" alt="wdd230 hero">
-                <source srcset="/images/medium.jpg" media="(min-width:625px)">
-                <source srcset="images/large.jpg" media="(min-width:825px)">
-              </picture>
+                <source srcset="images/small.jpg" media="(max-width:625px)">
+                <source srcset="images/medium.jpg" media="(max-width:825px)">
+                <img src="images/large.jpg" class="hero" alt="wdd230 hero">
+                </picture>
                 <h2>Preston Idaho</h2>
                 <section class="overlay">
                     <h3>Summary Overcast</h3>
