added if and else

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -43,10 +43,10 @@
                 <section class="overlay">
                     <h3>Summary Overcast</h3>
                     <p>Currently: <span id="condition">Cloudy</span></p>
-                    <p>High: <span id="temp">45&#8457;</span></p>
+                    <p>High: <span id="temp">50&#8457;</span></p>
                     <p>Chance of Rain: <span id="percent">50%</span></p>
                     <p>Wind Speed: <span id="wspd">10mph</span></p>
-                    <p>Wind Chill: <span id="chilly"></span><span>&#8457;</span></p>
+                    <p>Wind Chill: <span id="chilly"></span></p>
                 </section>
             </div>            
             <p class="five">5 Day Forcast</p>
