update overlay and font sizing

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -12,7 +12,7 @@
         <link rel="stylesheet" href="css/large.css">
     <body>
         <div class="popup">
-            <img src="images/pancake.jpg" class="pancake" alt="pan">
+            <img src="images/pancake.jpg" class="pancake" alt="breakfast">
             <button class="click" type="button" onclick="addPopup()">Who wants Pancakes!<br>Click Here</button>
         </div>
     <header>
@@ -24,19 +24,19 @@
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
             <li><a href="#">Home</a></li>
-            <li><a class="current2" href="#">Preston</a></li>
+            <li><a class="current" href="#">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a href="#">Storm Center</a></li>
             <li><a href="#">Gallery</a></li>
-        </ul>
+        </ul> 
     </nav>
         <main>
             <div class="hero">
                 <!--<img src="images/lake.jpeg" class="lake" alt="banner">-->
               <picture>
-                <source srcset="images/small.jpg" media="(max-width:625px)">
-                <source srcset="images/medium.jpg" media="(max-width:825px)">
+                <source srcset="images/small.jpg" media="(max-width:400px)">
+                <source srcset="images/medium.jpg" media="(max-width:600px)">
                 <img src="images/large.jpg" class="hero" alt="wdd230 hero">
                 </picture>
                 <h2>Preston Idaho</h2>
