fixed article image

--- a/lesson6/preston-6.html
+++ b/lesson6/preston-6.html
@@ -79,7 +79,7 @@
             </div>
             <section>
                 <h3 class="art">Our Real Heros</h3>
-                <img src="images/hero.jpg" class="line" alt="med">
+                <img src="images/hero.jpg" class="firstline" alt="med">
                 <p class="article">
                     Kim, 32, was a photographer before becoming a paramedic in 2016. He had been an EMT for 13 years, 
                     then took the additional year-plus of study to gain the higher certification. One of the skills he 
