--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <li>Lesson 04:<a href="lesson4/preston-4.html">Weather Outlet</a></li>
                 <li>Lesson 05:<a href="lesson5/preston-5.html">Weather Outlet P2</a></li>
                 <li>Lesson 06:<a href="lesson6/preston-6.html">Weather Outlet P3</a></li>
-                <li>Lesson 07:<a href="lesson7/lazyload.html">Lazy Load Images</a></li>
+                <li>Lesson 07:<a href="lesson7/lazyload.html">Lazy Load Images Activity</a></li>
             </ul>
         </main>
     <footer>
