--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
                 <li>Lesson 05:<a href="lesson5/preston-5.html">Weather Outlet P2</a></li>
                 <li>Lesson 06:<a href="lesson6/preston-6.html">Weather Outlet P3</a></li>
                 <li>Lesson 07:<a href="lesson7/lazyload.html">Lazy Load Images Activity</a></li>
+                <li>Lesson 07:<a href="lesson7/gallery.html">Weather Gallery</a></li>
+
             </ul>
         </main>
     <footer>
