--- a/lesson7/gallery.html
+++ b/lesson7/gallery.html
@@ -28,39 +28,39 @@
     </nav>
     <main>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/sunny.jpg" alt="sunshine">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/sunny.jpg" alt="image one">
             <figcaption>Sunny Weather<br>Get packed up & go on a hike.</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/coldfront.jpg" alt="cold clouds">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/coldfront.jpg" alt="image two">
             <figcaption>Cold Front Weather<br>Light up that fire & roast smores.</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/strongwinds.jpg" alt="windy">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/strongwinds.jpg" alt="image three">
             <figcaption>Caution: Strong Winds<br>Good intentions...Bad execution!</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/rain.jpg" alt="rainy">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/rain.jpg" alt="image four">
             <figcaption>Chance of Rain & Lightening 100%<br>Grab some popcorn & emjoy the show.</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/tornado.jpg" alt="tornado watch">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/tornado.jpg" alt="image five">
             <figcaption>TORNADO WARNING<br>That is not Thor or Dorthy saying Hi!<br>Get to saftey ASAP!</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloudjpg" data-src="gallery/fog.jpg" alt="foggy">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/fog.jpg" alt="image six">
             <figcaption>Foggy Weather<br>Warning: Your invisible to cars.<br>They cant see you or themselves.</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/hail.jpg" alt="hail cloud">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/hail.jpg" alt="image seven">
             <figcaption>Hail Weather<br>Hide your car, Hide your bike...<br>but holes & golf ball camo is trendy!</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/hurricanes.jpg" alt="coastal winds">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/hurricanes.jpg" alt="image eight">
             <figcaption>Hurricane Season<br>Beach is at lunch.<br>Come back later!</figcaption>
         </picture>
         <picture>
-            <img src="https://placehold.co/fluffy-cloud/jpg" data-src="gallery/snow.jpg" alt="winter">
+            <img src="https://placeholder.com/300x400?text=fluffy+cloud" data-src="gallery/snow.jpg" alt="image nine">
             <figcaption>Chance of Snow 100%<br>Its Cocoa Time. Warm up buttercup!</figcaption>
         </picture>
     </main>
