--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <li>Lesson 06:<a href="lesson6/preston-6.html">Weather Outlet P3</a></li>
                 <li>Lesson 07:<a href="lesson7/activity/lazyload.html">Lazy Load Images Activity</a></li>
                 <li>Lesson 07:<a href="lesson7/gallery.html">Weather Gallery</a></li>
+                <li>Lesson 08:<a href="lesson8/stormcenter.html">Storm Center</a></li>
 
             </ul>
         </main>
