--- a/lesson8/thanks.html
+++ b/lesson8/thanks.html
@@ -27,8 +27,8 @@
         </ul> 
     </nav>
         <main>
-            <div class="thanks">Thank you for your Storm Report. Have a Great Day!
-                <br> If you have an emergency, please call your local Emergency Service.
+            <div class="thanks">Thank you for the Storm Report.<br> Have a Great Day!</div>
+            <div class="danger"><u style="color: rgb(248, 193, 73);">-- Contact your local Emergency Services if in danger! --</u>
             </div>
         </main>
     <footer>
