--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -19,11 +19,11 @@
         <ul class="navigation">
             <li><a class="ham" href="#" onclick="toggleMenu()">&#9776;Menu</a></li>
             <li><a href="index.html">Home</a></li>
-            <li><a href="lesson5\preston-5.html">Preston</a></li>
+            <li><a href="lesson5/preston-5.html">Preston</a></li>
             <li><a href="#">Soda Springs</a></li>
             <li><a href="#">Fish Haven</a></li>
             <li><a class="current" href="">Storm Center</a></li>
-            <li><a href="lesson7\gallery.html">Gallery</a></li>
+            <li><a href="lesson7/gallery.html">Gallery</a></li>
         </ul> 
     </nav>
     <main>
@@ -37,7 +37,7 @@
             </fieldset>
             <fieldset>
                 <legend>Local Storm Report</legend>
-                <label class="sbs">Storm Date:<br><input type="date" id="date"required></label> 
+                <label class="sbs">Storm Date:<br><input type="date" id="calendar" required></label> 
                 <label class="top" for="storm">Storm Type:</label>
                 <input list="storm-type" name="storm" id="storm">
                     <datalist id="storm-type">
@@ -48,7 +48,7 @@
                     <option value="Snow Storm">
                     <option value="Tornado">
                 </datalist>
-                <label class="sbs">Storm Severity: 1<br><input type="range" id="scale" name="scale" min="1" max="10" required>10</label> 
+                <label class="sbs">Storm Severity: <br>1<input type="range" id="scale" name="scale" min="1" max="10">10</label> 
                 <label class="sbs">Storm Region:<br><select name="area" required>
                     <option value="">Please Select</option>
                     <option value="preston">Preston</option>
