--- a/lesson8/activity8/tablebuild.html
+++ b/lesson8/activity8/tablebuild.html
@@ -41,7 +41,7 @@
             <tr style="background-color: #e7ffed;">
                 <td>November</td>
             <td>$8610</td>
-            <td style="background-color: #628ca6;">$7500</td>
+            <td style="background-color: #628ca6;color: white;">$7500</td>
         </tr>
         <tr style="background-color: #e7f0ed;">
             <td><i>Black Friday</i></td>
