update name for complete by

--- a/lesson8/activity8/tablebuild.html
+++ b/lesson8/activity8/tablebuild.html
@@ -55,7 +55,7 @@
         </tbody>
         <tfoot>
             <tr style="background-color: #7fb9c2;">
-                <td colspan="3">Complied 12.20.2020 by bRauls</td>
+                <td colspan="3">Complied 12.20.2020 by CThomson</td>
             </tr>
         </tfoot>
         </table>
