--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -30,7 +30,7 @@
         <form method="get" action="thanks.html">
             <fieldset>
                 <legend>Local Information</legend>
-                <label class="top">First & Last Name*<input type="text" name="fname" required></label> 
+                <label class="top">First & Last Name*<input type="text" name="fname" pattern="[A-Za-z].{5,}" required></label> 
                 <label class="top">Email*<input type="email" name="email" placeholder="weatheroutlet@gmail.com" required></label> 
                 <label class="top">Phone*<input type="tel" name="phone" placeholder="12086885381" required></label> 
                 <label class="top">Zip Code*<input type="number" name="zip" required></label> 
@@ -70,6 +70,6 @@
         <p class="foot">&copy;Weather Outlet | Attributions | Chelsea Thomson<br> 
             <span id="date"></span>
          </footer>         
-             <script src="javascript/java.js"></script>
-    </body>
+         <script src="javascript/java.js"></script>
+        </body>
 </html>
