--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -74,5 +74,9 @@
             <span id="date"></span>
          </footer>         
          <script src="javascript/java.js"></script>
+        <script>
+        function adjustRating(rating) {
+            document.getElementById("ratingvalue").innerHTML = rating;}
+    </script>
         </body>
 </html>
