--- a/lesson8/stormcenter.html
+++ b/lesson8/stormcenter.html
@@ -48,7 +48,7 @@
                     <option value="Snow Storm">
                     <option value="Tornado">
                 </datalist>
-                <label for="rating">Storm Severity<input type="range" id="rating" value="1" min="1" max="10" list="rangeMarks"
+                <label for="rating" class="sbs">Storm Severity<input type="range" id="rating" value="1" min="1" max="10" list="rangeMarks"
                         oninput="adjustRating(this.value)" onchange="adjustRating(this.value)"><span
                         id="ratingvalue">1</span>
                 </label> 
