--- a/lesson9/activity/prophets.html
+++ b/lesson9/activity/prophets.html
@@ -7,6 +7,7 @@
         <meta name="description" content="This is the activity of week 9 for WDD230 Spring 2020">
         <link rel="shortcut icon" href="favicon.ico">
         <!--<link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap" rel="stylesheet">-->
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/prophets.css">   
         <link rel="stylesheet" href="css/prophetmed.css">
         <link rel="stylesheet" href="css/phrophetlg.css"> 
